--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin: 20px 0;
+            margin-top: 10px ;
+            
         }
         .service-overview a {
             text-decoration: none;
@@ -58,6 +59,7 @@
             flex: 1 1 calc(33% - 40px);
             margin: 10px;
             box-sizing: border-box;
+            
         }
         .service-overview .service-box {
             background: white;
