--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vidhnarharta Services</title>
+    <title>Vighnaharta Services</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,10 +29,12 @@
         }
         .hero {
             background-image: url('hero.jpg');
-            height: 400px;
+            height: 100px;
             background-size: cover;
             background-position: center;
             position: relative;
+            padding: 20px;
+            margin: 70px;
         }
         .hero-text {
             text-align: center;
@@ -182,7 +184,7 @@
     </div>
 
     <div class="footer">
-        <p>Designed and maintained by <a href="https://syoudtechnologies.com" target="_blank" style="color: #f2f2f2;">Syoud Technologies</a></p>
+        <p>Designed and maintained by <a href="https://skyoudtechnologies.com" target="_blank" style="color: #f2f2f2;">Syoud Technologies</a></p>
     </div>
 </body>
 </html>
