--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
 
     <div class="footer">
-        <p>Designed and maintained by <a href="https://skyoudtechnologies.com" target="_blank" style="color: #f2f2f2;">Syoud Technologies</a></p>
+        <p>Designed and maintained by <a href="https://skyoudtechnologies.com" target="_blank" style="color: #f2f2f2;">Skyoud Technologies</a></p>
     </div>
 </body>
 </html>
