--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vivices</title>
+    <title>Vighnaharta Services</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -130,7 +130,7 @@
 
     <div class="hero">
         <div class="hero-text">
-            <h1>Welcome to Vidhnarharta Services</h1>
+            <h1>Welcome to Vighnaharta Services</h1>
             <p>Your one-stop solution for Photography, Computer Repair, and Event Services</p>
         </div>
     </div>
