--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                 <img src="photography.jpg" alt="Photography">
                 <h3>Photography</h3>
                 <p>We capture your moments beautifully with our professional photography services.</p>
+                <a href="#bookPhotography" class="book-button">Book Now</a>
             </div>
         </a>
         <a href="#repair">
@@ -148,6 +149,7 @@
                 <img src="computer_repair.jpg" alt="Computer Repair">
                 <h3>Computer Repair</h3>
                 <p>Reliable computer repair services from expert technicians.</p>
+                <a href="#bookPhotography" class="book-button">Book Now</a>
             </div>
         </a>
         <a href="#event">
@@ -155,6 +157,7 @@
                 <img src="event_services.jpg" alt="Event Services">
                 <h3>Event Services</h3>
                 <p>Comprehensive event services for seamless and memorable events.</p>
+                <a href="#bookPhotography" class="book-button">Book Now</a>
             </div>
         </a>
     </div>
